<resources>
    <string name="app_name">motimates</string>

    <!--    목표 종료-->
    <string name="a_month">30day</string>
    <string name="a_year">1year</string>
    <string name="every_day">every day</string>


    <!--    버튼 -->
    <string name="save">저장</string>
    <string name="cancel">취소</string>


    <!--    꽃밭-->
    <string name="my_garden">나의 꽃밭으로 가기</string>
    <string name="upload_image">인증 사진 올리기</string>
    <string name="modify_image">인증 사진 수정하기</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

  <!-- 네비게이션 뷰 -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!--    알림에 임시로 들어갈 문장-->
    <string name="Title">제목</string>
    <string name = "content">내용</string>
</resources>